@@ -1,4 +1,3 @@
-Remove deprecated Process::getDimension, getSpatialDimension in 1.12
 Remove deprecated CovarianceModel::getDimension, getSpatialDimension, getSpatialCorrelation, setSpatialCorrelation in 1.12
 Remove deprecated SecondOrderModel::getDimension, getSpatialDimension in 1.12
 Remove deprecated SpectralModel::getDimension, getSpatialDimension, getSpatialCorrelation in 1.12
