@@ -11,6 +11,7 @@
 ==== API changes ====
  * Removed deprecated MonteCarlo, ImportanceSampling, QuasiMonteCarlo, RandomizedQuasiMonteCarlo, RandomizedLHS classes
  * Removed deprecated Field::getDimension, getSpatialDimension, getSpatialMean, getTemporalMean methods
+ * Remove deprecated Process::getDimension, getSpatialDimension methods
 
 === Python module ===
 
